<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_gradient"
    tools:context=".chat_test.MainActivity">

    <TextView
        android:id="@+id/txtConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_status"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="14dp"/>

    <LinearLayout
        android:id="@+id/upperLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtConnect"
        android:layout_marginTop="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp">

        <Button
                android:id="@+id/btnWiFiSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/wifi_selector" />

        <Button
                android:id="@+id/btnDiscover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/discover" />

        <Button
            android:id="@+id/btnGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/game_test"/>
    </LinearLayout>

    <ListView
        android:id="@+id/mListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintTop_toBottomOf="@id/upperLayout"
        app:layout_constraintBottom_toTopOf="@id/txtMessage"
        android:background="@color/grey20">
    </ListView>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        android:background="@color/grey10"
        app:layout_constraintBottom_toTopOf="@id/editTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mListView" />

    <EditText
        android:id="@+id/editTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSend"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="14dp"
        android:importantForAutofill="no"
        android:hint="@string/enter_your_message"/>
    <Button
        android:id="@+id/btnSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>